infrastructure/configs/longhorn/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
spec:
  parentRefs:
    - name: gateway
      namespace: kube-system
  hostnames: [longhorn.homelab.veselabs.com]
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
